# adk-notebooklm-agent

./: .gitignore  LICENSE  README.md  auth_store.py  pyproject.toml  server.py
_extension/: content.js  manifest.json  popup.html  popup.js
notebooklm_agent/: agent.py  helpers.py
notebooklm_agent/tools/: __init__.py  auth.py  download.py  notebooks.py  notes.py  research.py  sharing.py  sources.py  studio.py
